@@ -4,6 +4,8 @@ By: Carlos Julio Pérez Quizhpe
 	* Samples:
 		+ sample 1:
 			https://skills421.wordpress.com/2013/12/29/drools6-0-basic-example/
+		+ sample 2:
+			http://droolstutorials.blogspot.com/2015/07/simple-drools-using-maven.html
 
 	* Maven:
 		+ Generating project:
